Up to draw calls

--- a/DX11Starter.vcxproj
+++ b/DX11Starter.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BufferStructs.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="DX12Helper.h" />
     <ClInclude Include="DXCore.h" />
