--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,8 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+
+# Allow the assets folder
+!/Assets/
+!/Assets/**
